cont. home page content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,8 +35,8 @@ const description =
             height={60}
           />
           <div class="text-sm mb-8 mt-6">
-            <strong class="text-2xl font-bold">Armno Prommarak 🇹🇭</strong>
-            <div class="text-base md:text-lg leading-tight">
+            <strong class="text-base font-bold">Armno Prommarak 🇹🇭</strong>
+            <div class="text-sm md:text-base leading-tight">
               Frontend Developer & Team Lead at <a
                 href="https://buzzwoo.de"
                 target="_blank">Buzzwoo</a
@@ -47,22 +47,26 @@ const description =
         </div>
 
         <div class="text-base mb-16">
-          <p>
-            👋 Hi. I'm Armno. For the past 10+ years, I have been building
-            things with web technologies at <a
+          <p class="lead">
+            👋 Hi. I'm Armno. I'm a frontend developer at <a
               href="https://buzzwoo.de"
-              target="_blank">Buzzwoo</a
-            > 🇩🇪 &ndash; a digital agency in Chiang Mai, Thailand.
+              target="_blank">Buzzwoo Asia</a
+            > 🇩🇪 &ndash; a digital agency based in Chiang Mai, Thailand.
+          </p>
+          <h4 class="mt-12">Work</h4>
+          <p>
+            I've been with Buzzwoo for 10+ years (and counting!). My main resposibility is building user interfaces of websites and
+            web applications for our clients.
           </p>
           <p>
-            My main resposibility is to build user interfaces of websites and
-            web applications for our clients. JavaScript frameworks and frontend
-            performance are areas I enjoy working on the most.
+            JavaScript frameworks and frontend
+            performance are areas I enjoy working on the most. I'm comforatable working with
+            Angular, React, and Vue.
           </p>
 
           <h4>Writing</h4>
           <p>
-            I started this website as a blog in 2007. Writing and blogging have
+            I started this website as a blog in 2007. Writing blogs has
             been a big part of my life since then. I regularly write blog posts
             about what I have learned or what motivates me, both technical and
             non-technical posts. Here are some of my favorites.
@@ -79,8 +83,10 @@ const description =
 
           <h4>Life</h4>
           <p>
-            I'm a husband. I'm also a dad of 2 kids. So most of my time besides work are spent with my
-            family. Personally, I still see my self as a big nerd. I enjoy
+            I'm a husband and a father of 2 kids. Most of my time besides work are spent with my
+            family and my sons.
+            </p>
+            <p>Personally, I still see my self as a big nerd. I enjoy
             reading books, taking photos, building mechanical keyboards, and
             fixing stuffs that are not acually broken. On some Sundays, I would
             go out for a ride with my <a
