update homepage content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const description =
               target="_blank">Buzzwoo Asia</a
             > 🇩🇪 &ndash; a digital agency based in Chiang Mai, Thailand.
           </p>
-          <h4 class="mt-12">Work</h4>
+          <h4 class="mt-8">Work</h4>
           <p>
             I've been with Buzzwoo for 10+ years (and counting!). My main resposibility is building user interfaces of websites and
             web applications for our clients.
@@ -64,31 +64,48 @@ const description =
             Angular, React, and Vue.
           </p>
 
-          <h4>Writing</h4>
+          <h4 class="mt-20">Writing</h4>
           <p>
             I started this website as a blog in 2007. Writing blogs has
             been a big part of my life since then. I regularly write blog posts
             about what I have learned or what motivates me, both technical and
             non-technical posts. Here are some of my favorites.
           </p>
-          <ul>
-            <li>Web browser ทำงานอย่างไร</li>
+
+          <ul class="text-sm">
             <li>
-              <a
-                href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/"
-                >Building a custom mechanical keyboard</a
-              >
+              <a href="https://armno.in.th/blog/git-stash-patched-commit/">วิธีใช้ Git Stash</a>
+              <small>(2014)</small>
+            </li>
+            <li>
+              <a href="https://armno.in.th/blog/loadcss-async">Case study: เปลี่ยนวิธีโหลด CSS เพื่อให้เว็บ render ไวขึ้น</a>
+              <small>(2015)</small>
+            </li>
+            <li>
+              <a href="https://armno.in.th/blog/how-web-browsers-work/">Web browser ทำงานอย่างไร</a>
+                <small class="ml-1">(2016)</small>
+              </li>
+            <li>
+              <a href="https://armno.in.th/blog/angular-http-params-immutability">Creating a URL with HttpParams in Angular</a>
+              <small>(2020)</small>
+            </li>
+            <li>
+              <a href="https://armno.in.th/blog/vscode-setup-2023">My VSCode Setup</a>
+              <small>(2023)</small>
             </li>
           </ul>
+          <p>Check out <a href="/blog">the blog</a> for all articles.</p>
 
-          <h4>Life</h4>
+          <h4 class="mt-20">Life</h4>
           <p>
             I'm a husband and a father of 2 kids. Most of my time besides work are spent with my
             family and my sons.
             </p>
             <p>Personally, I still see my self as a big nerd. I enjoy
-            reading books, taking photos, building mechanical keyboards, and
-            fixing stuffs that are not acually broken. On some Sundays, I would
+            reading books, taking photos, <a href="https://armno.in.th/blog/building-mechanical-keyboard/">building</a>
+            <a href="https://armno.in.th/blog/lubricate-mechanical-keyboard-switches">mechanical</a>
+            <a href="https://armno.in.th/blog/corne-keyboard">keyboards</a>, and
+            fixing stuffs that is not acually broken. On some Sundays, I would
             go out for a ride with my <a
               href="https://www.strava.com/athletes/3637623">road bike</a
             >.
@@ -98,15 +115,15 @@ const description =
         <ul class="text-sm">
           <li>
             Email:
-            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>
+            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a> &mdash; is probably the easiest way to contact me.
           </li>
           <li>
             GitHub:
-            <a href="https://github.com/armno">armno</a>
+            <a href="https://github.com/armno">armno</a> &mdash; all of my public code are on GitHub.
           </li>
           <li>
             X (Twitter):
-            <a href="https://x.com/armno">@armno</a>
+            <a href="https://x.com/armno">@armno</a> &mdash; although I'm not active there anymore, it's still another way to ping me.
           </li>
         </ul>
       </div>
