--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,15 +53,19 @@ const description =
               target="_blank">Buzzwoo Asia</a
             > 🇩🇪 &ndash; a digital agency based in Chiang Mai, Thailand.
           </p>
-          <h4 class="mt-8">Work</h4>
+          <h4 class="mt-20">Work</h4>
           <p>
-            I've been with Buzzwoo for 10+ years (and counting!). My main resposibility is building user interfaces of websites and
+            I've been a frontend developer at Buzzwoo for 10+ years (and counting!). My main resposibility is building user interfaces of websites and
             web applications for our clients.
           </p>
           <p>
             JavaScript frameworks and frontend
             performance are areas I enjoy working on the most. I'm comforatable working with
-            Angular, React, and Vue.
+            Angular, React, and Vue. I'm also a big fan of <a href="https://astro.build" target="_blank">Astro</a>.
+          </p>
+          <p>
+            Before my time at Buzzwoo, I was a backend developer for about 3 years.
+            I worked quite a lot with PHP and WordPress back then.
           </p>
 
           <h4 class="mt-20">Writing</h4>
@@ -74,24 +78,24 @@ const description =
 
           <ul class="text-sm">
             <li>
-              <a href="https://armno.in.th/blog/git-stash-patched-commit/">วิธีใช้ Git Stash</a>
-              <small>(2014)</small>
+              <a href="https://armno.in.th/blog/vscode-setup-2023">My VSCode Setup</a>
+              <small>(2023)</small>
+            </li>
+            <li>
+              <a href="https://armno.in.th/blog/angular-http-params-immutability">Creating a URL with HttpParams in Angular</a>
+              <small>(2020)</small>
+            </li>
+            <li>
+              <a href="https://armno.in.th/blog/how-web-browsers-work/">Web browser ทำงานอย่างไร</a>
+                <small class="ml-1">(2016)</small>
             </li>
             <li>
               <a href="https://armno.in.th/blog/loadcss-async">Case study: เปลี่ยนวิธีโหลด CSS เพื่อให้เว็บ render ไวขึ้น</a>
               <small>(2015)</small>
             </li>
             <li>
-              <a href="https://armno.in.th/blog/how-web-browsers-work/">Web browser ทำงานอย่างไร</a>
-                <small class="ml-1">(2016)</small>
-              </li>
-            <li>
-              <a href="https://armno.in.th/blog/angular-http-params-immutability">Creating a URL with HttpParams in Angular</a>
-              <small>(2020)</small>
-            </li>
-            <li>
-              <a href="https://armno.in.th/blog/vscode-setup-2023">My VSCode Setup</a>
-              <small>(2023)</small>
+              <a href="https://armno.in.th/blog/git-stash-patched-commit/">วิธีใช้ Git Stash</a>
+              <small>(2014)</small>
             </li>
           </ul>
           <p>Check out <a href="/blog">the blog</a> for all articles.</p>
@@ -101,11 +105,11 @@ const description =
             I'm a husband and a father of 2 kids. Most of my time besides work are spent with my
             family and my sons.
             </p>
-            <p>Personally, I still see my self as a big nerd. I enjoy
+            <p>In my free time, I enjoy
             reading books, taking photos, <a href="https://armno.in.th/blog/building-mechanical-keyboard/">building</a>
             <a href="https://armno.in.th/blog/lubricate-mechanical-keyboard-switches">mechanical</a>
             <a href="https://armno.in.th/blog/corne-keyboard">keyboards</a>, and
-            fixing stuffs that is not acually broken. On some Sundays, I would
+            fixing broken stuffs. On some Sundays, I would
             go out for a ride with my <a
               href="https://www.strava.com/athletes/3637623">road bike</a
             >.
@@ -123,7 +127,7 @@ const description =
           </li>
           <li>
             X (Twitter):
-            <a href="https://x.com/armno">@armno</a> &mdash; although I'm not active there anymore, it's still another way to ping me.
+            <a href="https://x.com/armno">@armno</a> &mdash; although I'm not active there anymore, it's still a way to ping me.
           </li>
         </ul>
       </div>
