--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,20 +39,13 @@ const description =
             <div class="text-sm md:text-base leading-tight">
               Frontend Developer & Team Lead at <a
                 href="https://buzzwoo.de"
-                target="_blank">Buzzwoo</a
-              >.
+                target="_blank">Buzzwoo</a> 🇩🇪.
             </div>
             <!-- <div class="text-xs mt-4 text-gray-700 tracking-wider">Chiang Mai, Thailand</div> -->
           </div>
         </div>
 
         <div class="text-base mb-16">
-          <p class="lead">
-            👋 Hi. I'm Armno. I'm a frontend developer at <a
-              href="https://buzzwoo.de"
-              target="_blank">Buzzwoo Asia</a
-            > 🇩🇪 &ndash; a digital agency based in Chiang Mai, Thailand.
-          </p>
           <h4 class="mt-20">Work</h4>
           <p>
             I've been a frontend developer at Buzzwoo for 10+ years (and counting!). My main resposibility is building user interfaces of websites and
@@ -103,14 +96,14 @@ const description =
           <h4 class="mt-20">Life</h4>
           <p>
             I'm a husband and a father of 2 kids. Most of my time besides work are spent with my
-            family and my sons.
+            family.
             </p>
             <p>In my free time, I enjoy
             reading books, taking photos, <a href="https://armno.in.th/blog/building-mechanical-keyboard/">building</a>
             <a href="https://armno.in.th/blog/lubricate-mechanical-keyboard-switches">mechanical</a>
             <a href="https://armno.in.th/blog/corne-keyboard">keyboards</a>, and
             fixing broken stuffs. On some Sundays, I would
-            go out for a ride with my <a
+            go out for a ride on my <a
               href="https://www.strava.com/athletes/3637623">road bike</a
             >.
           </p>
