--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const description =
             height={60}
           />
           <div class="text-sm mb-8 mt-6">
-            <strong class="text-base font-bold">Armno Prommarak 🇹🇭</strong>
+            <strong class="text-xl font-bold">Armno Prommarak 🇹🇭</strong>
             <div class="text-sm md:text-base leading-tight">
               Frontend Developer & Team Lead at <a
                 href="https://buzzwoo.de"
