--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -9,12 +9,12 @@ const { title, pubDate, thumbnail, tags, categories } = frontmatter;
 const canonicalURL = Astro.url;
 ---
 
-<PageLayout { frontmatter } isPost={true}>
+<PageLayout frontmatter={frontmatter} isPost={true}>
   <div slot="post-header" class="lg:col-span-full grid grid-cols-1 lg:grid-cols-2 gap-8 lg:mb-20">
     {thumbnail &&
     <div class="order-2 lg:order-1 lg:col-start-1 lg:col-end-2 mb-10 lg:mb-0">
       <a href={thumbnail}>
-        <Image src={thumbnail} alt={title} class="w-full lg:w-4/5 mx-auto my-0 rounded-3xl" width={800} height={533} fit={'cover'}
+        <Image src={thumbnail} alt={title} class="object-cover w-full lg:w-4/5 mx-auto my-0 rounded-3xl" width={800} height={533}
           loading={'eager'} />
       </a>
     </div>
