add social icons with links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const { pathname } = Astro.url;
 
 ---
 
-<header class="mx-auto px-6 grid grid-flow-col grid-cols-[1fr] items-center max-w-2xl">
+<header class="mx-auto px-6 md:px-0 grid grid-flow-col grid-cols-[1fr] items-center max-w-2xl">
   <a href="/" class="inline-block w-12 h-12 md:w-16 md:h-16">
     <svg class="w-12 h-12 md:w-16 md:h-16" width="50" height="50" viewBox="0 0 50 50" fill="none"
       xmlns="http://www.w3.org/2000/svg">
