--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -21,7 +21,7 @@ const { url, title, thumbnail, pubDate, description, isLatest, isRelatedPost } =
     <Image class="object-cover aspect-[3/2] w-full" src={thumbnail} alt={title} width={200} height={166} />
     }
     {!thumbnail &&
-    <div class="border w-full h-28 max-h-48 text-sm flex justify-center items-center text-slate-300">no thumbnail</div>
+    <div class="border w-full aspect-[3/2] text-sm flex justify-center items-center text-slate-300">no thumbnail</div>
     }
     {isLatest &&
     <div class="font-bold font-headings text-3xl leading-tight mt-[1em]">{title}</div>
