--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import "@fontsource/sarabun/400.css";
-import "@fontsource/sarabun/700.css";
-import "@fontsource/frank-ruhl-libre/400.css";
-import "@fontsource/frank-ruhl-libre/700.css";
+// import "@fontsource/sarabun/400.css";
+// import "@fontsource/sarabun/700.css";
+// import "@fontsource/frank-ruhl-libre/400.css";
+// import "@fontsource/frank-ruhl-libre/700.css";
 
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
