adjust wordings on home page a bit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,17 +59,17 @@ const description =
         <div class="text-base mb-16">
           <h4 class="mt-20">Work</h4>
           <p>
-            I've been a frontend developer at Buzzwoo for 10+ years (and counting!). My main resposibility is building user interfaces of websites and
+            I've been a frontend developer at Buzzwoo for 10+ years. My main resposibility is building user interfaces of websites and
             web applications for our clients.
           </p>
           <p>
             JavaScript frameworks and frontend
             performance are areas I enjoy working on the most. I'm comforatable working with
-            Angular, React, and Vue. I'm also a big fan of <a href="https://astro.build" target="_blank">Astro</a>.
+            Angular, React, and Vue. I'm also a big fan of <a href="https://astro.build" target="_blank">Astro</a>, which is a framework I use to build this website.
           </p>
           <p>
-            Before my time at Buzzwoo, I was a backend developer for about 3 years.
-            I worked quite a lot with PHP and WordPress back then.
+            Before my time at Buzzwoo, I was a backend/fullstack developer for about 3 years.
+            I worked quite a lot with PHP and WordPress back then, before slowly transition to the frontend.
           </p>
 
           <h4 class="mt-20">Writing</h4>
