update links on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,11 @@ const description =
 
           <ul class="text-sm">
             <li>
-              <a href="https://armno.in.th/blog/vscode-setup-2023">My VSCode Setup</a>
+              <a href="https://armno.in.th/blog/exploring-keystatic/">Exploring Keystatic</a>
+              <small>(2024)</small>
+            </li>
+            <li>
+              <a href="https://armno.in.th/blog/corne-keyboard">Building the Corne Keyboard</a>
               <small>(2023)</small>
             </li>
             <li>
