simplify home page content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,28 +57,27 @@ const description =
         </div>
 
         <div class="text-base mb-16">
-          <h4 class="mt-20">Work</h4>
-          <p>
-            I've been a frontend developer at Buzzwoo for 10+ years. My main resposibility is building user interfaces of websites and
+
+          <h4 class="mt-20">Profession</h4>
+          <p>I make websites and a few other things at Buzzwoo. My main resposibility is building user interfaces of websites and
             web applications for our clients.
-          </p>
-          <p>
-            JavaScript frameworks and frontend
-            performance are areas I enjoy working on the most. I'm comforatable working with
+            I enjoy the most working on <strong>JavaScript frameworks</strong> and <strong>frontend
+            performance</strong>. I'm comforatable working with
             Angular, React, and Vue. I'm also a big fan of <a href="https://astro.build" target="_blank">Astro</a>, which is a framework I use to build this website.
           </p>
           <p>
-            Before my time at Buzzwoo, I was a backend/fullstack developer for about 3 years.
-            I worked quite a lot with PHP and WordPress back then, before slowly transition to the frontend.
+            Before my time at Buzzwoo, I was a backend/fullstack-<em>ish</em> developer.
+            I worked quite a lot with PHP and WordPress, before slowly moving my focus to the frontend land.
           </p>
 
           <h4 class="mt-20">Writing</h4>
           <p>
             I started this website as a blog in 2007. Writing blogs has
             been a big part of my life since then. I regularly write blog posts
-            about what I have learned or what motivates me, both technical and
-            non-technical posts. Here are some of my favorites.
+            about what I have just learned, or what motivates me, both technical and
+            non-technical posts, in Thai and in English.
           </p>
+          <p>Here are some of my favorites in the technical areas:</p>
 
           <ul class="text-sm">
             <li>
@@ -114,10 +113,11 @@ const description =
             family.
             </p>
             <p>In my free time, I enjoy
-            reading books, taking photos, <a href="https://armno.in.th/blog/building-mechanical-keyboard/">building</a>
+            reading books, <a href="https://armno.in.th/blog/building-mechanical-keyboard/">building</a>
             <a href="https://armno.in.th/blog/lubricate-mechanical-keyboard-switches">mechanical</a>
-            <a href="https://armno.in.th/blog/corne-keyboard">keyboards</a>, and
-            fixing broken stuffs. On some Sundays, I would
+            <a href="https://armno.in.th/blog/corne-keyboard">keyboards</a>, photography, and
+            fixing broken stuffs.
+            On some Sundays, I
             go out for a ride on my <a
               href="https://www.strava.com/athletes/3637623">road bike</a
             >.
@@ -127,15 +127,18 @@ const description =
         <ul class="text-sm">
           <li>
             Email:
-            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a> &mdash; is probably the easiest way to contact me.
+            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>
+            <br><small>Sorry for the weird email address ¯\_(ツ)_/¯. It's the best I could come up in 2007.</small>
           </li>
           <li>
             GitHub:
-            <a href="https://github.com/armno">armno</a> &mdash; all of my public code are on GitHub.
+            <a href="https://github.com/armno">armno</a>
+            <br><small>You can create an <a href="https://github.com/armno/armno/issues">Issue</a> here, then I&rsquo;ll get the email.</small>
           </li>
           <li>
             X (Twitter):
-            <a href="https://x.com/armno">@armno</a> &mdash; although I'm not active there anymore, it's still a way to ping me.
+            <a href="https://x.com/armno">@armno</a>
+            <br><small>I'm not active there anymore, but I still keep my old tweets.</small>
           </li>
         </ul>
       </div>
