update homepage content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,8 +58,8 @@ const description =
 
         <div class="text-base mb-16">
 
-          <h4 class="mt-20">Profession</h4>
-          <p>I make websites and a few other things at Buzzwoo. My main resposibility is building user interfaces of websites and
+          <h4 class="mt-20">About</h4>
+          <p>Hi, I'm Armno. I'm a developer at Buzzwoo. My main resposibility is building user interfaces of websites and
             web applications for our clients.
             I enjoy the most working on <strong>JavaScript frameworks</strong> and <strong>frontend
             performance</strong>. I'm comforatable working with
