--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const description =
           <p>Hi, I'm Armno. I'm a developer at Buzzwoo. My main resposibility is building user interfaces of websites and
             web applications for our clients.
             I enjoy the most working on <strong>JavaScript frameworks</strong> and <strong>frontend
-            performance</strong>. I'm comforatable working with
+            performance</strong>. I'm comfortable working with
             Angular, React, and Vue. I'm also a big fan of <a href="https://astro.build" target="_blank">Astro</a>, which is a framework I use to build this website.
           </p>
           <p>
