--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import RelatedPosts from '@components/RelatedPosts.astro';
+import Comments from '@components/Comments.astro';
 import PageLayout from './PageLayout.astro';
 import { format } from 'date-fns';
 import { Image } from 'astro:assets';
@@ -35,4 +36,5 @@ const canonicalURL = Astro.url;
   </div>
   <slot />
   <RelatedPosts tags={tags} currentPathname={canonicalURL.pathname} />
+  <Comments />
 </PageLayout>
