--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,3 +1,4 @@
+<div class="mt-12">
 <script src="https://giscus.app/client.js"
         data-repo="armno/armno.in.th"
         data-repo-id="R_kgDOG83p9g"
@@ -14,3 +15,4 @@
         crossorigin="anonymous"
         async>
 </script>
+</div>
