add pagefind manually

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -16,6 +16,8 @@ const classes = 'mt-20 mx-auto pb-24 prose prose-slate main leading-6';
 <html lang={language ? language : 'th'}>
 	<head>
 		<BaseHead {title} {description} {thumbnail} />
+    <link href="/pagefind/pagefind-ui.css" rel="stylesheet" />
+    <script src="/pagefind/pagefind-ui.js" is:inline></script>
     <GlobalStyle />
 	</head>
 	<body class="antialiased">
