disable multilanguage search

--- a/src/components/SearchBox.astro
+++ b/src/components/SearchBox.astro
@@ -3,7 +3,7 @@
   window.addEventListener("DOMContentLoaded", (event) => {
     new PagefindUI({
       element: "#search",
-      showSubResults: true,
+      showSubResults: false,
     });
   });
 </script>
