narrow down index scope to just blog posts

--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -31,7 +31,7 @@ const relatedPosts = sampleSize(allRelatedPosts, 3);
 
 {
   relatedPosts.length > 0 && (
-    <section class="mt-20 not-prose">
+    <section class="mt-20 not-prose" data-pagefind-ignore>
       <h4 class="text-sm text-slate-600 uppercase tracking-widest font-bold mb-4">
         Related posts
       </h4>
