--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -20,7 +20,7 @@ const classes = 'mt-20 mx-auto pb-24 prose prose-slate main leading-6';
     <script src="/pagefind/pagefind-ui.js" is:inline></script>
     <GlobalStyle />
 	</head>
-	<body class="antialiased">
+	<body class="antialiased" data-pagefind-body={isPost} data-pagefind-ignore={!isPost}>
 		<Header />
     {isPost &&
 		<article class={classes}>
