--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -53,9 +53,9 @@ const content = {
           <h2 class="font-bold">{year.year}</h2>
           <ol class="list-none p-0">
             {year.posts.map((post) => (
-              <li class="p-0">
+              <li class="p-0 flex gap-3 lg:items-baseline">
                 <time
-                  class="font-mono text-xs text-slate-600"
+                  class="font-mono text-xs text-slate-600 leading-6 lg:leading-loose"
                   datetime={post.data.pubDate.toString()}
                 >
                   {format(new Date(post.data.pubDate), "dd.MM.yyyy")}
