fix outdated content

--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -40,6 +40,10 @@
   kbd {
     @apply border border-slate-400 rounded-[3px] px-0.5 text-sm;
   }
+
+  blockquote:has(cite) {
+    @apply !pb-4;
+  }
 }
 
 @layer components {
