temp. disable full bleed layout

--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -52,7 +52,7 @@
     @apply text-sm;
   }
 
-  .main {
+  /* .main {
     display: grid;
     grid-template-columns: minmax(1.5rem, 1fr) min(65ch, calc(100% - 3rem)) minmax(1.5rem, 1fr);
     @apply max-w-5xl;
@@ -64,6 +64,11 @@
 
   .full-bleed {
     grid-column: 1 / -1;
+  } */
+  .full-bleed {
+    display: flex;
+    width: 100vw;
+    overflow: hidden;
   }
 
   .prose blockquote p {
