--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -32,7 +32,7 @@ const relatedPosts = sampleSize(allRelatedPosts, 3);
 {
   relatedPosts.length > 0 && (
     <section class="mt-20 not-prose" data-pagefind-ignore>
-      <h4 class="text-sm text-slate-600 uppercase tracking-widest font-bold mb-4">
+      <h4 class="text-sm text-slate-600 uppercase tracking-widest font-bold mb-4 dark:text-slate-200">
         Related posts
       </h4>
       <ul class="grid gap-y-8 lg:grid-cols-3 lg:gap-x-8 lg:gap-y-0">
