--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 const { pathname } = Astro.url;
 ---
 
-<footer class="pt-20 pb-20 text-xs mx-auto text-center">
-  <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700">
+<footer class="pt-20 pb-20 text-xs mx-auto text-center dark:text-slate-200">
+  <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700 dark:bg-slate-100">
   <div class="leading-relaxed">
     <p>&copy; 2007&hyphen;now Armno Prommarak.<br>All Rights Reserved.</p>
     <p class="mt-4">Made in <a
