--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,16 +11,16 @@ import GlobalStyle from '@components/GlobalStyle.astro';
 const { frontmatter, isPost } = Astro.props;
 const { title, description, thumbnail, language } = frontmatter;
 
-const classes = 'mt-20 mx-auto pb-24 prose prose-slate prose-base main leading-6 px-6 md:px-0';
+const classes = 'mt-20 mx-auto pb-24 prose prose-slate prose-base main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200';
 ---
-<html lang={language ? language : 'th'}>
+<html lang={language ? language : 'th'} class="dark">
 	<head>
 		<BaseHead {title} {description} {thumbnail} />
     <link href="/pagefind/pagefind-ui.css" rel="stylesheet" />
     <script src="/pagefind/pagefind-ui.js" is:inline></script>
     <GlobalStyle />
 	</head>
-	<body class="antialiased" data-pagefind-body={isPost} data-pagefind-ignore={!isPost}>
+	<body class="antialiased dark:bg-zinc-900" data-pagefind-body={isPost} data-pagefind-ignore={!isPost}>
 		<Header />
     {isPost &&
 		<article class={classes}>
