--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -13,7 +13,7 @@ const { title, description, thumbnail, language } = frontmatter;
 
 const classes = 'mt-20 mx-auto pb-24 prose prose-slate prose-base main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200';
 ---
-<html lang={language ? language : 'th'} class="dark">
+<html lang={language ? language : 'th'}>
 	<head>
 		<BaseHead {title} {description} {thumbnail} />
     <link href="/pagefind/pagefind-ui.css" rel="stylesheet" />
