--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,10 @@ const description =
     <BaseHead title={title} description={description} thumbnail={thumbnail} />
     <GlobalStyle />
   </head>
-  <body class="antialiased dark:bg-zinc-900">
+  <body class="antialiased dark:bg-zinc-900 transition-colors">
     <Header />
     <main class="mx-auto max-w-2xl mb-12">
-      <div class="px-6 md:pt-12 md:col-span-2 mx-auto prose prose-slate dark:prose-invert dark:text-slate-200">
+      <div class="px-6 md:px-2 md:pt-12 md:col-span-2 mx-auto prose prose-slate dark:prose-invert dark:text-slate-200">
         <div class="mt-10 mb-20 text-center md:text-left">
           <img
             src="/images/ana.jpg"
