tweak colors of pagefine input in dark mode

--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -9,6 +9,14 @@
     --pagefind-ui-scale: 1;
   }
 
+  .dark {
+  --pagefind-ui-primary: #e5e7eb;
+  --pagefind-ui-text: #e5e7eb;
+  --pagefind-ui-background: #3f3f46;
+  --pagefind-ui-border: #152028;
+  --pagefind-ui-tag: #152028;
+}
+
   html {
     font-size: 112.5%;
   }
