--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,6 +15,7 @@ const { pathname } = Astro.url;
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
     >
+      <title>armno.in.th logo</title>
       <rect width="50" height="50"></rect>
       <path
         d="M36.1111 34.8006L25 15.5556L13.8889 34.8006H15.6885L21.9948 23.8777L28.3011 34.8006H36.1111Z"
