--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -24,7 +24,7 @@ const canonicalURL = Astro.url;
       <h1 class="text-3xl lg:text-4xl leading-tight mb-0 max-w-[80%]">{title}</h1>
       <div class="flex gap-5 mt-4">
         <div>
-          <img src="/images/and.jpg" width="40" height="40" alt="Armno's avatar image"
+          <img src="/images/and.jpg" width="40" height="40" alt="Armno's avatar"
           class="rounded-full flex-shrink-0 m-0">
         </div>
         <div class="text-sm leading-5">
