--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -8,32 +8,37 @@ import Footer from '@components/Footer.astro';
 import BaseHead from '@components/BaseHead.astro';
 import GlobalStyle from '@components/GlobalStyle.astro';
 
-const { frontmatter, isPost } = Astro.props;
+interface Props {
+  frontmatter: {
+    title: string;
+    description: string;
+    thumbnail: string;
+    language: string;
+  };
+  isPost: boolean;
+  hasSearch?: boolean;
+}
+
+const { frontmatter, isPost, hasSearch } = Astro.props;
 const { title, description, thumbnail, language } = frontmatter;
 
-const classes = 'mt-20 mx-auto pb-24 prose prose-slate prose-base main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200';
+const TagName = isPost ? 'article' : 'main';
 ---
 <html lang={language ? language : 'th'}>
 	<head>
 		<BaseHead {title} {description} {thumbnail} />
+    {hasSearch &&
     <link href="/pagefind/pagefind-ui.css" rel="stylesheet" />
     <script src="/pagefind/pagefind-ui.js" is:inline></script>
+    }
     <GlobalStyle />
 	</head>
 	<body class="antialiased dark:bg-zinc-900 transition-colors" data-pagefind-body={isPost} data-pagefind-ignore={!isPost}>
 		<Header />
-    {isPost &&
-		<article class={classes}>
-      <slot name="post-header" />
+    <TagName class="mt-20 mx-auto pb-24 prose prose-slate prose-base main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200">
+      {isPost && <slot name="post-header" />}
       <slot />
-    </article>
-    }
-
-    {!isPost &&
-		<main class={classes}>
-      <slot />
-    </main>
-    }
+    </TagName>
     <Footer />
 	</body>
 </html>
