--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -42,7 +42,7 @@ const content = {
 };
 ---
 
-<PageLayout frontmatter={content}>
+<PageLayout frontmatter={content} isPost={false} hasSearch={true}>
   <h1 class="font-bold">Blog</h1>
   <SearchBox />
 
