add suffix to title

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,7 +10,7 @@ const canonicalURL = Astro.url;
 const defaultDescription = `I'm Armno - a Thai frontend developer at buzzwoo. Based in Chiang Mai. I write about what I've learned.`;
 ---
 
-<title>{ title }</title>
+<title>{ title } - armno.in.th</title>
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
