convert document field to markdoc in keystatic schema

--- a/src/components/WarningMessage.astro
+++ b/src/components/WarningMessage.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props as Props;
 ---
 <div class="bg-yellow-100 pt-2 pb-2 px-8 my-6 dark:bg-gray-700">
   {title && (
-    <div class="font-bold">{title}</div>
+    <div class="font-bold mt-4">{title}</div>
   )}
   <slot />
 </div>
